--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "url": "https://bitbucket.org/twentyfirst/code-challenge"
     },
     "dependencies": {
-        "express": "^4.16.3"
+        "angular-route": "^1.7.4",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.3",
+        "npm": "^6.4.1",
+        "pg": "^7.4.3"
     }
 }
