--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "angular-route": "^1.7.4",
         "body-parser": "^1.18.3",
+        "bootstrap": "^4.1.3",
         "express": "^4.16.3",
         "npm": "^6.4.1",
         "pg": "^7.4.3"
