--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "body-parser": "^1.18.3",
         "bootstrap": "^4.1.3",
         "express": "^4.16.3",
-        "npm": "^6.4.1",
-        "pg": "^7.4.3"
+        "npm": "^6.4.1"
     }
 }
